add: simple factory

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="menu">
       
     </div>
-    <canvas id="canvas2" width="300" height="300"></canvas>
+    <canvas id="canvas" width="300" height="300"></canvas>
     <script type="module" src="./dist/index.js"></script>
 </body>
 </html>
